Fixed loading not showing and moved status to right

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,3 +122,7 @@
       padding: 3px;
     }
  }
+
+.gVZomo {
+   min-height: 134px;
+} 
